Bug 1523817 - Fix tracks that start at StreamTime t > 0. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D18312

--HG--
extra : moz-landing-system : lando